<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:baselineAligned="false"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:weightSum="10"
              android:background="@color/colorWhite"
              tools:context="rck.supernacho.ru.rollercalckt.fragments.EditMaterialFragment">


    <ListView
        android:id="@+id/add_frag_list_view_materials"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/edit_material_material_name"/>
        <EditText
            android:id="@+id/add_frag_edit_text_material_name"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/edit_material_material_thickness"/>
        <EditText
            android:id="@+id/add_frag_edit_text_material_thick"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:inputType="numberDecimal"
            android:layout_marginStart="10dp"/>
        <ImageButton
            android:id="@+id/add_frag_button_new_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_note_add_black_48dp"
            android:background="@color/colorWhite"
            android:text="@string/edit_material_add_new_material_button"/>
        <ImageButton
            android:id="@+id/add_frag_button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:src="@drawable/ic_edit_black_48dp"
            android:layout_margin="10dp"
            android:text="@string/edit_material_update_material_button"/>
        <ImageButton
            android:id="@+id/add_frag_button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:src="@drawable/ic_delete_forever_black_48dp"
            android:text="@string/edit_material_delete_material_button"/>
    </LinearLayout>
</LinearLayout>
