<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calc_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/colorWhite"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <TextView
        android:id="@+id/calc_fragment_select_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_select_material_text_view"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/calc_fragment_spinner_material"
        app:layout_constraintLeft_toLeftOf="@id/calc_fragment_spinner_material"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
        android:id="@+id/calc_fragment_spinner_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/calc_fragment_text_view_output"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_fragment_select_label"
        app:layout_constraintEnd_toStartOf="@id/calc_fragment_button_add_material"/>


    <ImageButton
        android:id="@+id/calc_fragment_button_add_material"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:srcCompat="@drawable/ic_edit_black_48dp"
        android:background="@color/colorWhite"
        android:text="@string/calc_edit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_fragment_select_label"
        app:layout_constraintStart_toEndOf="@+id/calc_fragment_spinner_material"
        android:contentDescription="@string/add_material_button"/>


    <TextView
        android:id="@+id/calc_fragment_text_view_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_fragment_spinner_material"
        tools:text="145.232"/>

    <FrameLayout
        android:id="@+id/calc_fragment_frame_input_inn_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_fragment_text_view_output">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_inner_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calc_fragment_text_view_output">

            <EditText
                android:id="@+id/calc_fragment_inner_d"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/calc_inner_d_text_view"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>

    <SeekBar
        android:id="@+id/calc_fragment_seek_inner_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc_fragment_frame_input_inn_d"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_outer_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_fragment_seek_inner_d">

        <EditText
            android:id="@+id/calc_fragment_outer_d"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/calc_outer_d_text_view"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <SeekBar
        android:id="@+id/calc_fragment_seek_outer_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_outer_d"/>
</androidx.constraintlayout.widget.ConstraintLayout>

