<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="rck.supernacho.ru.rollercalckt.screens.material.view.MaterialsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context=".screens.material.view.MaterialFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Find"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.filterInteractor.filterBy(text)}"
                    tools:text="Avery"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="name"
                    android:onClickListener="@{() -> viewModel.filterInteractor.sortByName()}"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thickness"
                    android:onClickListener="@{() -> viewModel.filterInteractor.sortByThickness()}"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:onClickListener="@{() -> viewModel.filterInteractor.sortByWeight()}"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/density"
                    android:onClickListener="@{() -> viewModel.filterInteractor.sortByDensity()}"
                    />
            </LinearLayout>
        </LinearLayout>

        <com.tubb.smrv.SwipeMenuRecyclerView
            android:id="@+id/rv_materials"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:itemCount="15"
            tools:listitem="@layout/material_item"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cornerRadius="20dp"
            android:text="add material"
            android:textAlignment="center"
            android:onClickListener="@{(view) -> viewModel.onClickAdd()}"/>

    </LinearLayout>
</layout>